# DLAL

./: README.md
libdlal/: CMakeLists.txt  Doxyfile.in  make_single_header.py
libdlal/include/: mat.h  mat_detail.h  mat_operations.h  mat_transforms.h  packed_mat.h  packed_vec.h  quat.h  transformation.h  vec.h  vec_trig.h
libdlal/single_include/: linear_algebra_full.h
libdlal/test/: doctest.h  matrix.cpp  matrix_operations.cpp  matrix_transform.cpp  quat.cpp  test_common.h  tmatrix.cpp  vector.cpp
src/: CMakeLists.txt  linalg.pro  make_single_header.py  matrix.cpp  matrix_operations.cpp  matrix_transform.cpp  quat.cpp  test_common.h  test_single_header.h  tmatrix.cpp  vector.cpp
src/include/: linear_algebra.h  mat.h  mat_detail.h  mat_operations.h  mat_transform.h  mat_transforms.h  packed_mat.h  packed_vec.h  quat.h  tmatrix.h  vec.h  vec_detail.h  vec_trig.h
src/single_include/: linear_algebra_full.h
src/test/: matrix_operations.cpp  matrix_transform.cpp  quat.cpp  test_common.h  tmatrix.cpp
